# l1nus

./: .gitignore  LICENSE.md  README.md  pyproject.toml  subset_pubchem_arrow.py
.github/: copilot-instructions.md
.windsurf/: rules  rules.txt
configs/: all_properties.yaml  chem_lesson_1.yaml  chem_lesson_2.yaml  chem_lesson_3.yaml  chem_lesson_4.yaml  iupac_naming.yaml  molecular_properties.yaml  structure.yaml
etl/pubchem/: etl_pug_view.py
etl/pubchem/pubchem/: load_pubchem.py
fp/: cluster_pubchem.ipynb  tsv_to_arrow.ipynb
llm/: inference_llm.py  llm_apis.py  mpi_config.json  prepare_dataset.py  run_mpi.sh  run_test_llm.sh  run_train_single.sh  test_accelerate.py  test_llm.py  test_llm_apis.py  train_llm.py  venv_only.sh
notebooks/: cluster_add_similar.ipynb  cluster_pubchem.ipynb
scripts/: common.sh  common_single_node.sh  mpi_deepspeed_config.json  run_mpi.sh  run_mpi_chem_lesson_1.sh  run_mpi_chem_lesson_2.sh  run_mpi_eval.sh  run_mpi_iupac.sh  run_mpi_properties.sh  run_mpi_structure.sh  run_mpi_test.sh  run_single_node_iupac.sh  run_test_llm.sh  run_train_single.sh  run_train_single_iupac.sh  venv_only.sh
src/etl/pubchem/: etl_pug_view.py
src/llm/: inference_llm.py  llm_apis.py  llm_mol.py  structure_processor.py  train_llm.py
src/llm/datasets/: __init__.py  cli_build.py  cli_sample.py  preprocess.py
src/llm/evaluate/: cli_evaluate.py
src/llm/inference/: cli_inference.py
src/llm/questions/: __init__.py  cli_generate.py  generators.py  (+2 more)
tests/: test_integration_regression.py  test_llm_apis.py  test_preprocess.py  test_templates.py
(+8 files in other folders)
