[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "l1nus"
version = "0.1.0"
description = "Standardized Python project for l1nus"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "accelerate",
    "datasets",
    "evaluate",
    "numpy",
    "pyarrow",
    "pyyaml",
    "rdkit-pypi",
    "torch",
    "tqdm",
    "transformers",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
    
